upgrade project to java 9

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -6,6 +6,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=StdAdmin
 application.vendor=Administrator
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -58,14 +59,15 @@ file.reference.JFolderChooser-0.9.jar-1=F:\\Working Directory\\UCSC\\java\\Final
 file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\abans\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 file.reference.poi-3.0.1-FINAL-20070705.jar=libs\\poi-3.0.1-FINAL-20070705.jar
 file.reference.poi-3.0.1-FINAL-20070705.jar-1=F:\\Working Directory\\UCSC\\java\\Final Project - Andrew - 763052222V\\libs\\poi-3.0.1-FINAL-20070705.jar
-file.reference.synthetica.jar=libs\\synthetica.jar
-file.reference.synthetica.jar-1=F:\\Working Directory\\UCSC\\java\\Final Project - Andrew - 763052222V\\libs\\synthetica_2.19.1_eval\\synthetica.jar
-file.reference.syntheticaOrangeMetallic.jar=libs\\syntheticaOrangeMetallic.jar
-file.reference.syntheticaOrangeMetallic.jar-1=F:\\Working Directory\\UCSC\\java\\Final Project - Andrew - 763052222V\\libs\\syntheticaOrangeMetallic_2.9.4\\syntheticaOrangeMetallic.jar
+file.reference.synthetica.jar=C:\\Users\\abans\\Downloads\\synthetica_3.5.0_eval\\synthetica.jar
+file.reference.syntheticaDark.jar=C:\\Users\\abans\\Downloads\\syntheticaDark\\V3\\syntheticaDark.jar
+file.reference.syntheticaStandard.jar=C:\\Users\\abans\\Downloads\\V3\\syntheticaStandard.jar
 file.reference.xercesImpl.jar=libs\\xercesImpl.jar
 file.reference.xercesImpl.jar-1=F:\\Working Directory\\UCSC\\java\\Final Project - Andrew - 763052222V\\libs\\xercesImpl.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.barbecue-1.5-beta1.jar}:\
@@ -85,12 +87,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.JFolderChooser-0.9.jar}:\
     ${file.reference.poi-3.0.1-FINAL-20070705.jar}:\
-    ${file.reference.synthetica.jar}:\
-    ${file.reference.syntheticaOrangeMetallic.jar}:\
     ${file.reference.xercesImpl.jar}:\
     ${file.reference.mysql-connector-j-8.2.0.jar}:\
-    ${file.reference.synthetica.jar-1}:\
-    ${file.reference.syntheticaOrangeMetallic.jar-1}:\
     ${file.reference.JFolderChooser-0.9.jar-1}:\
     ${file.reference.barbecue-1.5-beta1.jar-1}:\
     ${file.reference.commons-beanutils-1.7.jar-1}:\
@@ -108,7 +106,10 @@ javac.classpath=\
     ${file.reference.jasperreports-2.0.4.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.poi-3.0.1-FINAL-20070705.jar-1}:\
-    ${file.reference.xercesImpl.jar-1}
+    ${file.reference.xercesImpl.jar-1}:\
+    ${file.reference.syntheticaStandard.jar}:\
+    ${file.reference.synthetica.jar}:\
+    ${file.reference.syntheticaDark.jar}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=false
@@ -116,12 +117,11 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=9
+javac.target=9
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}:\
     ${libs.hamcrest.classpath}
 javac.test.modulepath=\
@@ -141,8 +141,25 @@ javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
 jlink.launcher.name=StdAdmin
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 junit.selected.version=4
 main.class=stdadmin.Main
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -150,7 +167,6 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
